# finally

./: .env.example  .events.jsonl  CLAUDE.local.md  CLAUDE.md  Dockerfile  README.md  scratch.txt
.beads/: routes.jsonl
.claude/: gsd-file-manifest.json  settings.json
.claude/agents/: change-reviewer.md  codex-reviewer.md  gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  (+13 more)
.dolt-data/: config.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.runtime/: session_id
backend/: pyproject.toml
backend/app/: database.py  llm.py  main.py  models.py  snapshots.py
backend/app/market/: cache.py  interface.py  massive_client.py  seed_prices.py  simulator.py  stream.py
backend/app/routes/: chat.py  health.py  portfolio.py  watchlist.py
backend/tests/: conftest.py  test_api.py  test_chat.py  test_database.py  test_snapshots.py
backend/tests/market/: test_massive.py
daemon/: daemon.pid  dolt-state.json  restart_state.json  state.json
db/: finally.db
deacon/: feed-stranded-state.json  heartbeat.json  state.json
finally/: .gitignore
frontend/: jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json
mayor/: daemon.json  overseer.json  rigs.json  town.json
planning/: CODE_REVIEW.md  MARKET_DATA_DESIGN.md  MARKET_INTERFACE.md  MARKET_SIMULATOR.md  MASSIVE_API.md  PLAN.md  REVIEW.md
plugins/: README.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: docker-compose.test.yml  package.json  playwright.config.ts
witness/: bead-respawn-counts.json
(+323 files in other folders)
